# otfdownloader

./: Cargo.toml  LICENSE
src/: db.rs  download.rs  main.rs
