[package]
name = "otfdownloader"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
eframe = "0.31.1"
egui = "0.31.1"
egui_extras = "0.31.1"
env_logger = "0.11.7"
m3u8-rs = "6.0.0"
regex = "1.11.1"
reqwest = "0.12.15"
rusqlite = "0.34.0"
tokio = { version = "1.44.1", features = ["full"] }
uris = "0.1.1"
